Minor change to CSS to stop overflow-x
Added overflow:hidden; to the Spinning Earth CSS to stop overflow while on a small screen.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,6 +99,7 @@
    width: 500px;
    height: 500px;
    position: relative;
+   overflow: hidden;
  }
  
  .earth-sphere img {
@@ -106,7 +107,6 @@
    height: 100%;
    border-radius: 50%;
    animation: rotate-earth 120s linear infinite;
-   overflow: auto;
  }
  
  @keyframes rotate-earth {
